Initial work towards a new API